theme: Fix entry height jumping on focus changes
Currently only the overview's search entry avoids size changes when its
border width changes due to a focus change by adjusting its padding
accordingly.

Fix this for all entries by moving that style to the global entry styling.

https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/701

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -85,12 +85,17 @@ stage {
 /* Entries */
 StEntry {
   border-radius: $button_radius;
-  padding: 4px;
+  padding: 7px 9px;
   border-width: 1px;
   color: $fg_color;
   @include entry(normal);
-  //&:hover { @include entry(hover);}
-  &:focus { @include entry(focus,$fc:transparentize($fg_color,0.5));}
+  &:hover { @include entry(hover);}
+  &:focus {
+    @include entry(focus,$fc:transparentize($fg_color,0.5));
+    padding: 6px 8px;
+    border-width: 2px;
+    border-color: $selected_bg_color;
+  }
   &:insensitive { @include entry(insensitive);}
   selection-background-color: $selected_bg_color;
   selected-color: $selected_fg_color;
@@ -1356,16 +1361,10 @@ StScrollBar {
   //search entry
   .search-entry, %search_entry {
     width: 320px;
-    padding: 7px 9px;
     border-radius: 18px;
     color: $fg_color;
     background-color: $base_color;
     border-color: $borders_color;
-    &:focus {
-      padding: 6px 8px;
-      border-width: 2px;
-      border-color: $selected_bg_color;
-    }
 
     .search-entry-icon { icon-size: 1em; padding: 0 4px; color: $fg_color; }
 
